--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,24 @@
   "name": "hr-emailer-server",
   "version": "1.0.0",
   "description": "Backend server for HR Outreach Emailer",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "socket.io": "^4.7.4",
     "xlsx": "^0.18.5"
