--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,13 @@ services:
     name: hr-emailer-server
     env: node
     plan: free
+    rootDir: server
     buildCommand: npm install
     startCommand: npm start
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 10000
       - key: CLIENT_URL
         value: https://your-frontend-url.netlify.app
     autoDeploy: true
