--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,6 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# Build outputs
-build/
-dist/
-
-# Uploaded files
-uploads/
-*.xlsx
-*.xls
-
 # Logs
 logs
 *.log
@@ -36,58 +27,35 @@ coverage/
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage
-.grunt
+# Uploaded files
+uploads/
+temp/
+tmp/
 
-# Bower dependency directory
-bower_components
+# Campaign data (may contain sensitive info)
+campaigns.json
+*.json.backup
 
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons
-build/Release
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# VS Code
-.vscode/
-
-# MacOS
+# OS generated files
 .DS_Store
-
-# Windows
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# IDE
+# IDE files
+.vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Temporary files
-*.tmp
-*.temp
+# Build directories
+dist/
+build/
 
-# Production build artifacts
-/client/build
-
-# Debug files
-debug.log
-error.log
+# Deployment files
+.vercel
+.netlify
