--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "hr-outreach-emailer",
+  "name": "hr-emailer-server",
   "version": "1.0.0",
-  "description": "MERN stack application for automated HR outreach email campaigns",
-  "main": "server/index.js",
+  "description": "Backend server for HR Outreach Emailer",
+  "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "start": "npm run server:start",
-    "server:dev": "cd server && npm run dev",
-    "server:start": "cd server && npm start",
-    "client:dev": "cd client && npm start",
-    "client:build": "cd client && npm run build",
-    "install:all": "npm install && cd server && npm install && cd ../client && npm install"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.8",
+    "socket.io": "^4.7.4",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "keywords": [
     "email",
     "automation",
     "hr",
-    "outreach",
-    "mern",
-    "react",
-    "nodejs"
+    "outreach"
   ],
   "author": "Sameer Bagul",
-  "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  }
+  "license": "MIT"
 }
