--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
+    "form-data": "^4.0.4",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "multer": "^1.4.5-lts.1",
