--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "form-data": "^4.0.4",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
