--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "form-data": "^4.0.4",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
-    "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "socket.io": "^4.7.4",
+    "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5"
   },
